<resources>
    <string name="app_name">QR Saver</string>
    <string name="login">로그인</string>
    <string name="id">아이디</string>
    <string name="password">패스워드</string>
    <string name="register">회원가입</string>
    <string name="notLogin">로그인없이 시작</string>
    <string name="name">이름</string>
    <string name="passwordCheck">비밀번호 확인</string>
    <string name="logout">로그아웃</string>
    <string name="shooting">촬영하기</string>
    <string name="storage">저장소</string>
    <string name="create">생성하기</string>
    <string name="shootinging">촬영 중</string>
    <string name="title">제목</string>
    <string name="execute">실행하기</string>
    <string name="save">저장하기</string>
    <string name="reshooting">재촬영</string>
    <string name="share">공유하기</string>
    <string name="delete">삭제하기</string>
    <string name="text">URL</string>
    <string name="recreate">재생성</string>
    <string name="idpwfail">아이디와 비밀번호를 입력하세요</string>
    <string name="idfail">아이디를 입력해 주세요</string>
    <string name="pwfail">비밀번호를 입력해 주세요</string>
    <string name="noid">해당 아이디가 존재하지 않습니다.</string>
    <string name="notpw">비밀번호가 일치하지 않습니다.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
