<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/idForm"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp"
        android:ems="10"
        android:hint="@string/id"
        android:inputType="textPersonName"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/pwForm"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/moveNav"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp"
        android:background="@color/colorMain"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <Button
        android:id="@+id/moveRegister"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:text="@string/register"
        android:textSize="18sp" />

    <Button
        android:id="@+id/notLogin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:background="@color/colorMain"
        android:text="@string/notLogin"
        android:textColor="#ffffff"
        android:textSize="18sp" />

</LinearLayout>