<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/editText8"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp"
        android:ems="10"
        android:hint="@string/id"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/passwordCheck"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp"
        android:background="@color/colorMain"
        android:text="@string/register"
        android:textColor="#ffffff"
        android:textSize="18sp" />

</LinearLayout>