<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateqrActivity" >

    <ImageView
        android:id="@+id/createdQR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp"
        app:srcCompat="@drawable/qrcode" />

    <EditText
        android:id="@+id/createTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/create_exeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp"
        android:background="@color/colorMain"
        android:text="@string/execute"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/create_saveBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:background="@color/colorMain"
        android:text="@string/save"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/create_recreateBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:background="@color/colorMain"
        android:text="@string/recreate"
        android:textColor="#ffffff" />

</LinearLayout>